--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -201,7 +201,8 @@
                     <Button
                         android:id="@+id/addMustStationBtn"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="6dp"/>
 
                     <TextView
                         android:id="@+id/mustLinesTitle"
@@ -321,7 +322,8 @@
                 <Button
                     android:id="@+id/addCustomStationBtn"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="6dp"/>
 
                 <Button
                     android:id="@+id/applyManualPathBtn"
